syntax = "proto3";

option go_package = "./pb";

package relation;

message AddFriendReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message AddFriendResp {
  string FailedReason = 1;
}
message DelFriendReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message DelFriendResp {
  string FailedReason = 1;
}
message IsFriendReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message IsFriendResp {
  message Item {
    string UserId = 1;
    bool IsFriend = 2;
  }
  repeated Item list = 1;
}
message GetFriendModelReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message GetFriendModelResp {
  repeated bytes models = 1;
}
message UpdateFriendModelReq {
  string SendUserId = 1;
  string RecvUserId = 2;
  map<string, string> updateMap = 3;
}
message UpdateFriendModelResp {
  string FailedReason = 1;
}
message GetFriendIdsReq {
  string SendUserId = 1;
}
message GetFriendIdsResp {
  repeated string FriendIds = 1;
}
message AddBlacklistReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message AddBlacklistResp {
  string FailedReason = 1;
}
message DelBlacklistReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message DelBlacklistResp {
  string FailedReason = 1;
}
message IsBlacklistReq {
  string SendUserId = 1;
  repeated string RecvUserIds = 2;
}
message IsBlacklistResp {
  message Item {
    string UserId = 1;
    bool IsBlacklist = 2;
  }
  repeated Item list = 1;
}
message GetBlacklistReq {
  string SendUserId = 1;
}
message GetBlacklistResp {
  repeated string BlacklistIds = 1;
}
message GetBlacklistModelReq {
  string SendUserId = 1;
  repeated string BlacklistIds = 2;
}
message GetBlacklistModelResp {
  repeated bytes models = 1;
}

service relationService {
  rpc AddFriend(AddFriendReq) returns (AddFriendResp);
  rpc DelFriend(DelFriendReq) returns (DelFriendResp);
  rpc IsFriend(IsFriendReq) returns (IsFriendResp);
  rpc GetFriendModel(GetFriendModelReq) returns (GetFriendModelResp);
  rpc UpdateFriendModel(UpdateFriendModelReq) returns (UpdateFriendModelResp);
  rpc GetFriendIds(GetFriendIdsReq) returns (GetFriendIdsResp);
  rpc AddBlacklist(AddBlacklistReq) returns (AddBlacklistResp);
  rpc DelBlacklist(DelBlacklistReq) returns (DelBlacklistResp);
  rpc IsBlacklist(IsBlacklistReq) returns (IsBlacklistResp);
  rpc GetBlacklist(GetBlacklistReq) returns (GetBlacklistResp);
  rpc GetBlacklistModel(GetBlacklistModelReq) returns (GetBlacklistModelResp);
}